--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ $(document).ready(function() {
         { data: 'EXPO', className: 'dt-center', orderable: false },
         { data: 'CRAZY', className: 'dt-center', orderable: false },
         { data: 'GROOVE', className: 'dt-center', orderable: false },
-        { data: '備考', className: 'dt-left' }
+        { data: '備考', className: 'dt-center', orderable: false }
       ],
       order: [] // 初期ソートなし
     });
